# chaincerts-smart-contracts

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENCE  LICENSE  README.md  SECURITY.md  build.sh  release.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md
.github/workflows/: cd.yaml  cd.yml  ci.yaml  ci.yml  scorecards.yml
cert_issuance/: Cargo.toml  cert_wallet.wasm  certs_wallet.wasm
cert_issuance/src/: contract.rs  issuance_trait.rs  lib.rs  metadata.rs  organization.rs  recipients.rs  storage_types.rs  test.rs
cert_wallet/: Cargo.toml
cert_wallet/src/: access_control_list.rs  chaincert.rs  error.rs  lib.rs  owner.rs
certs_governance/: Cargo.toml  certs_wallet.wasm
certs_governance/src/: contract.rs  error.rs  governance_trait.rs  lib.rs  metadata.rs  organization.rs  receivers.rs  storage_types.rs  test.rs
certs_wallet/: Cargo.toml
certs_wallet/src/: access_control_list.rs  chaincert.rs  lib.rs  option.rs  owner.rs  storage_types.rs  test.rs
chaincerts_governance/: Cargo.toml
chaincerts_wallet/: Cargo.toml
deployer_contract/: Cargo.toml  did_contract.wasm
deployer_contract/src/: lib.rs  test.rs
did_contract/: Cargo.toml
did_contract/src/: access_control_list.rs  authentication.rs  capability_invocation.rs  chaincert.rs  did_document.rs  error.rs  lib.rs  option.rs  owner.rs  storage_types.rs  test.rs  verifiable_credential.rs
issuance_contract/: Cargo.toml  did_contract.wasm
issuance_contract/src/: attest.rs  contract.rs  error.rs  issuance_trait.rs  lib.rs  metadata.rs  organization.rs  recipients.rs  storage_types.rs  test.rs
vault_contract/: Cargo.toml  README.md  soroban_did_contract.wasm
vault_contract/src/: contract.rs  did.rs  error.rs  issuer.rs  lib.rs  storage.rs  vault.rs  vault_trait.rs  verifiable_credential.rs
vault_contract/src/test/: contract.rs  setup.rs
vc_issuance_contract/: Cargo.toml  README.md  vault_contract.wasm
vc_issuance_contract/src/: base32.rs  contract.rs  error.rs  lib.rs  revocation.rs  storage.rs  vc_issuance_trait.rs  vc_revocation.rs  vc_status.rs  verifiable_credential.rs
vc_issuance_contract/src/test/: contract.rs  setup.rs
verifiable_credentials_contract/: Cargo.toml  vault_contract.wasm
verifiable_credentials_contract/src/: contract.rs  error.rs  lib.rs  revocation.rs  storage.rs  vcs_trait.rs  verifiable_credential.rs
verifiable_credentials_contract/src/test/: contract.rs  setup.rs
