[workspace]
resolver = "2"

members = ["issuance_contract", "did_contract", "deployer_contract", "vault_contract", "vc_issuance_contract"]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "20.0.0-rc2"

[workspace.dependencies.soroban-auth]
version = "0.8.3"
