[workspace]
resolver = "2"

members = ["deployer_contract", "vault_contract", "vc_issuance_contract"]

[workspace.package]
version = "0.15.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kommitters/chaincerts-smart-contracts"

[workspace.dependencies]
soroban-sdk = { version = "=20.2.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
