[package]
name = "certs_governance"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dependencies.uuid]
version = "1.3.0"
default-features = false
features = ["v5"]

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
